--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 pandas 
 numpy
 google-cloud-storage
-scikit-learn
 PyYAML
+seaborn
+matplotlib
+scikit-learn==1.3.2 
+imbalanced-learn==0.11.0
+ipykernel
+statsmodels
+xgboost 
+lightgbm
