--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ __pycache__
 
 notebook/random_forest.pkl
 notebook/train.csv
-artifacts/raw
-artifacts/processed
+mlruns
+MLOps_Project_1.egg-info/
+MLOps_Project_1.egg-info
