--- a/custom_jenkins/Dockerfile
+++ b/custom_jenkins/Dockerfile
@@ -1,5 +1,5 @@
 # Build stage
-FROM python:slim as builder
+FROM python:3.11-slim as builder
 
 WORKDIR /app
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -7,12 +7,14 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+COPY requirements.txt .
+RUN pip install --user --only-binary :all: -r requirements.txt
+
 COPY . .
-RUN pip install --upgrade pip && \
-    pip install -e .
+RUN pip install --user --only-binary :all: -e .
 
 # Runtime stage
-FROM python:slim
+FROM python:3.11-slim
 
 WORKDIR /app
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -20,8 +22,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+# Copy installed packages from builder
+COPY --from=builder /root/.local /root/.local
 COPY --from=builder /app /app
+
+# Make sure scripts in .local are usable
+ENV PATH=/root/.local/bin:$PATH
 
 RUN python pipeline/training_pipeline.py
 
